--- a/jankenpo.css
+++ b/jankenpo.css
@@ -1,4 +1,21 @@
 /* CSS declarations go here */
+.custom-bg {
+  background: rgb(36,33,40);
+  padding-top: 3em;
+}
+
+.bar-custom {
+  background: transparent;
+}
+
+.bar-custom h1.title {
+  color: rgba(255, 255, 255, .7);
+}
+
+.custom-padding {
+  padding-top: 3em;
+}
+
 .result-img-adjusment {
   width: 100%;
   height: 100%;
