--- a/jankenpo.css
+++ b/jankenpo.css
@@ -19,4 +19,20 @@
 .result-img-adjusment {
   width: 100%;
   height: 100%;
+  padding: 3em;
+}
+
+.card-custom {
+  background: transparent;
+}
+
+.item-custom {
+  background: rgba(255,255,255,.1);
+  padding: 3em;
+}
+
+.item-text-custom {
+  background: rgba(255,255,255,.1);
+  border: rgba(255,255,255,.1);
+  color: rgba(255,255,255,.9);
 }
